{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 8,
  "lineage": "d7dc1343-e124-7cbd-e54b-f09315b8743f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d89d6aed0ee3d694",
            "arn": "arn:aws:ec2:ap-south-1:964674229867:instance/i-0d780d1adaaf7ef49",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d780d1adaaf7ef49",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01c7f28c60d2dc88a",
            "private_dns": "ip-192-168-1-199.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.199",
            "public_ip": "13.233.9.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0773993a8cb377595",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a0c877de1ed0c2d",
            "tags": {
              "Name": "webserver"
            },
            "tags_all": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f15b83dae185f494"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_http_jenkins",
            "aws_subnet.subnet-public-1",
            "aws_vpc.terraform",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_teraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964674229867:internet-gateway/igw-08e131bbb51f9a5da",
            "id": "igw-08e131bbb51f9a5da",
            "owner_id": "964674229867",
            "tags": {
              "Name": "gw_teraform"
            },
            "tags_all": {
              "Name": "gw_teraform"
            },
            "vpc_id": "vpc-01f94059652a3327f"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964674229867:route-table/rtb-05cde88bd976b9374",
            "id": "rtb-05cde88bd976b9374",
            "owner_id": "964674229867",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08e131bbb51f9a5da",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-subnet-1"
            },
            "tags_all": {
              "Name": "route-table-subnet-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f94059652a3327f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw_teraform",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038eb2e31bbd787f0",
            "route_table_id": "rtb-05cde88bd976b9374",
            "subnet_id": "subnet-07a0c877de1ed0c2d"
          },
          "dependencies": [
            "aws_internet_gateway.gw_teraform",
            "aws_route_table.route-table-subnet-1",
            "aws_subnet.subnet-public-1",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_http_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964674229867:security-group/sg-0f15b83dae185f494",
            "description": "Allow SSH, HTTP, and Jenkins traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f15b83dae185f494",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow_ssh_http_jenkins",
            "name_prefix": "",
            "owner_id": "964674229867",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http_jenkins"
            },
            "tags_all": {
              "Name": "allow_ssh_http_jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f94059652a3327f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964674229867:subnet/subnet-07a0c877de1ed0c2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a0c877de1ed0c2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "964674229867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public-1"
            },
            "tags_all": {
              "Name": "subnet-public-1"
            },
            "vpc_id": "vpc-01f94059652a3327f"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964674229867:vpc/vpc-01f94059652a3327f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0b21e516c8f837652",
            "default_route_table_id": "rtb-053bced2b1b2246a8",
            "default_security_group_id": "sg-0afe997310fb1bd91",
            "dhcp_options_id": "dopt-0e923d98fe41d9178",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f94059652a3327f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-053bced2b1b2246a8",
            "owner_id": "964674229867",
            "tags": {
              "Name": "terraform"
            },
            "tags_all": {
              "Name": "terraform"
            }
          }
        }
      ]
    }
  ]
}